--- a/app/templates/education.html
+++ b/app/templates/education.html
@@ -6,41 +6,49 @@
 <div class="page-content">
     <h1>Education</h1>
 
+    <!-- Certificates Section -->
     <div id="certificates" class="education-section">
         <h2>Certificates</h2>
         <div class="grid-container">
+            <!-- AWS CCP -->
             <div class="grid-item">
-                <a href="{{ url_for('static', filename='images/tech/AWS-CCP.pdf') }}" target="_blank" rel="noopener noreferrer" title="View Certificate PDF">
-                    <img src="{{ url_for('static', filename='images/tech/AWS-CCP-1.png') }}" alt="AWS Certified Cloud Practitioner Badge" class="certificate-badge">
+                <a href="{{ url_for('static', filename='images/tech/AWS-CCP.pdf') }}" target="_blank" rel="noopener noreferrer" title="View AWS CCP Certificate PDF">
+                    <img src="{{ url_for('static', filename='images/education/CCP-badge.png') }}" alt="AWS Certified Cloud Practitioner Badge" class="certificate-badge">
                 </a>
-                <h3 class="certificate-title">AWS CCP</h3>
             </div>
+            <!-- AWS SAA -->
             <div class="grid-item">
-                <a href="{{ url_for('static', filename='images/tech/AWS-SAA.pdf') }}" target="_blank" rel="noopener noreferrer" title="View Certificate PDF">
-                    <img src="{{ url_for('static', filename='images/tech/AWS-SAA-1.png') }}" alt="AWS Certified Solutions Architect Associate Badge" class="certificate-badge">
+                <a href="{{ url_for('static', filename='images/tech/AWS-SAA.pdf') }}" target="_blank" rel="noopener noreferrer" title="View AWS SAA Certificate PDF">
+                    <img src="{{ url_for('static', filename='images/education/SAA-badge.png') }}" alt="AWS Certified Solutions Architect Associate Badge" class="certificate-badge">
                 </a>
-                <h3 class="certificate-title">AWS SAA</h3>
             </div>
+            <!-- CKA -->
             <div class="grid-item">
-                <a href="{{ url_for('static', filename='images/tech/CKA.pdf') }}" target="_blank" rel="noopener noreferrer" title="View Certificate PDF">
-                    <img src="{{ url_for('static', filename='images/tech/CKA-1.png') }}" alt="Certified Kubernetes Administrator Badge" class="certificate-badge">
+                <a href="{{ url_for('static', filename='images/tech/CKA.pdf') }}" target="_blank" rel="noopener noreferrer" title="View CKA Certificate PDF">
+                    <img src="{{ url_for('static', filename='images/education/CKA-badge.png') }}" alt="Certified Kubernetes Administrator Badge" class="certificate-badge">
                 </a>
-                <h3 class="certificate-title">CKA</h3>
             </div>
         </div>
     </div>
 
+    <!-- Online Courses Section -->
     <div id="courses" class="education-section">
         <h2>Online Courses</h2>
         <div class="grid-container">
             <div class="grid-item">
-                <h3>Python Bootcamp</h3>
+                <a href="https://udemy-certificate.s3.amazonaws.com/image/UC-abc961ff-8f59-44fa-b947-16a7ee2fd51d.jpg" target="_blank" rel="noopener noreferrer" class="course-link">
+                    <h3>Python Bootcamp</h3>
+                </a>
             </div>
             <div class="grid-item">
-                <h3>DevOps Bootcamp</h3>
+                <a href="https://udemy-certificate.s3.amazonaws.com/image/UC-93064727-9a40-400f-bb49-43f9c52f267f.jpg" target="_blank" rel="noopener noreferrer" class="course-link">
+                    <h3>DevOps Bootcamp</h3>
+                </a>
             </div>
             <div class="grid-item">
-                <h3>GitHub Actions</h3>
+                <a href="https://udemy-certificate.s3.amazonaws.com/image/UC-f6c31cbe-98e2-483a-9e37-97717beb78d8.jpg" target="_blank" rel="noopener noreferrer" class="course-link">
+                    <h3>GitHub Actions</h3>
+                </a>
             </div>
             <div class="grid-item">
                 <h3>CCNA Official Course</h3>
@@ -54,6 +62,7 @@
         </div>
     </div>
 
+    <!-- Academic Degrees Section -->
     <div id="degrees" class="education-section">
         <h2>Academic Degrees</h2>
         <div class="grid-container">
